--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       value="Raúl Santa Cruz">
         </label>
 
-        <label for="topics">
+        <!-- <label for="topics">
           <input 
           type="checkbox" 
           name="" 
@@ -74,12 +74,32 @@
 12. Prepositions of place (preposiciones de lugar)
 13. Clothes (ropa)
 14. Places (lugares)
-15. Verbs (verbos)</textarea>
+15. Verbs (verbos)</textarea> -->
 
-    </form>
-<button onclick="toss()" id="toss">Sorteo</button>
+      </form>
+      <button id="toss">Sorteo</button>
     </div>
   </div>
-  <script src="app.js"></script>
+  <div id="results">
+    <h3>Resultados</h3>
+    <div id="container">
+      <div>Curso: <span id="result-course"></span></div>
+      <div>Profesor: <span id="result-teacher"></span></div>
+      <div>Preguntas: <span id="result-questions"></span></div>
+      <div id="questions-selected">
+        <div class="question 1"></div>
+        <div class="question 2"></div>
+        <div class="question 3"></div>
+        <div class="question 4"></div>
+        <div class="question 5"></div>
+      </div>
+      <div class="buttons">
+        <button id="new-toss">Nuevo Sorteo</button>
+        <button id="setting">Configuración</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="app2.js"></script>
 </body>
 </html>
