--- a/index.html
+++ b/index.html
@@ -7,44 +7,46 @@
   <link rel="stylesheet" href="style.css">
   <title>BALOTARIO ANTONIO ENCINAS</title>
 </head>
-<body>
+<body id="body">
   <div id="content">
     <h3 id="title">Datos</h3>
     <div id="items">
       <form >
         <label for="course">
-          <input 
+          <!-- <input 
           type="checkbox" 
           name=""
           id="" 
           checked="true"
-          >Curso: <input 
+          >-->
+          Curso: <br/><input  
                   type="text" 
                   id="course" 
                   value="Inglés">
         </label>
-
+        <br/>
         <label for="total-questions">
-          Total de preguntas:  <input 
+          Total de preguntas:  <br/><input 
                                 type="number" 
                                 id="total-questions" 
                                 value="15">
         </label>
-
+        <br/>
         <label for="total-evaluated">
-          Cantidad a evaluar: <input 
+          Cantidad a evaluar: <br/><input 
                               type="number" 
                               id="total-evaluated" 
                               value="5">
         </label>
-
+        <br/>
         <label for="teacher">
-          <input 
+          <!-- <input 
           type="checkbox" 
           name="" 
           id="" 
           checked="true"
-          >Profesor: <input 
+          >--> Profesor: 
+          <br/><input  
                       type="text" 
                       id="teacher" 
                       value="Raúl Santa Cruz">
@@ -93,10 +95,10 @@
         <div class="question 4"></div>
         <div class="question 5"></div>
       </div>
-      <div class="buttons">
-        <button id="new-toss">Nuevo Sorteo</button>
-        <button id="setting">Configuración</button>
-      </div>
+    </div>
+    <div class="buttons">
+      <button id="new-toss">Nuevo Sorteo</button>
+      <button id="setting">Configuración</button>
     </div>
   </div>
 
